--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "blog",
   "version": "0.1.0",
   "private": true,
+  "homepage":"http://ljrblog.com",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "pm2": "pm2 start pm2.json" 
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
