--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "blog",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://ljrblog.com",
+  "homepage": "http://blogwuyue.com",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "pm2": "pm2 start pm2.json" 
+    "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
     "@zeit/next-css": "^1.0.1",
-    "antd": "^3.9.0",
+    "antd": "^4.2.0",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "highlight.js": "^10.0.1",
     "lodash": "^4.17.15",
     "markdown-navbar": "^1.4.1",
     "marked": "^1.0.0",
+    "moment": "^2.26.0",
     "next": "9.3.6",
     "react": "16.13.1",
     "react-dom": "16.13.1"
